<resources>
    <string name="app_name">Tuning Bar</string>
    <string name="name"><![CDATA[Tuning Bar&Burger]]></string>
    <string name="type"><![CDATA[Bar&Grill, Hamburger]]></string>
    <string name="address">Budapest, Akácfa u. 45, 1072</string>
    <string name="web">www.tuningbar.hu</string>
    <string name="phone">+36-20-821-7303</string>
    <string name="message">tuningburger45@gmail.com</string>
    <string name="facebook">www.facebook.com/tuningbar</string>
    <string name="hours">Mon-Thu 12:00-23:00, Fri-Sat 12:00-23:45, Sun 12:00-22:00</string>
    <string name="best_burger">Best Burger in town...</string>
</resources>
