<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.tuningbar.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/tuning" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            style="@style/MainTextStyle"
            android:layout_marginTop="@dimen/custom_padding"
            android:text="@string/name" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout style="@style/LayoutStyle">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="center"
                        android:src="@drawable/restaurant" />

                    <TextView
                        style="@style/TextStyle"
                        android:text="@string/type" />
                </LinearLayout>

                <LinearLayout style="@style/LayoutStyle">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="center"
                        android:src="@drawable/address" />

                    <TextView
                        style="@style/TextStyle"
                        android:text="@string/address" />
                </LinearLayout>

                <LinearLayout style="@style/LayoutStyle">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="center"
                        android:src="@drawable/web" />

                    <TextView
                        style="@style/TextStyle"
                        android:text="@string/web" />
                </LinearLayout>

                <LinearLayout style="@style/LayoutStyle">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="center"
                        android:src="@drawable/phone" />

                    <TextView
                        style="@style/TextStyle"
                        android:text="@string/phone" />
                </LinearLayout>

                <LinearLayout style="@style/LayoutStyle">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="center"
                        android:src="@drawable/message" />

                    <TextView
                        style="@style/TextStyle"
                        android:text="@string/message" />
                </LinearLayout>

                <LinearLayout style="@style/LayoutStyle">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="center"
                        android:src="@drawable/facebook" />

                    <TextView
                        style="@style/TextStyle"
                        android:text="@string/facebook" />
                </LinearLayout>

                <LinearLayout style="@style/LayoutStyle">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="center"
                        android:src="@drawable/hours" />

                    <TextView
                        style="@style/TextStyle"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/hours" />
                </LinearLayout>

                <TextView
                    style="@style/MainTextStyle"
                    android:text="@string/best_burger" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>